--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,5 +3,7 @@ body {
     /* This picture was taken on a family trip in TN! */
     background-image: url("../img/wooden-balcony.jpg");
     background-size: cover;
-    background-repeat:repeat-y;
+    background-repeat:no-repeat;
+    /* fixed background for continuity */
+    background-attachment: fixed;
 }
