--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -1,2 +1,15 @@
-.custom-bg {
+:root {
+    /* color scheme: */
+    --light-blue: #C9EAFF;
+    --light-pink: #FFE3E3;
+    --matte-blue: #7B9DB3;
+
+    /* shades of --light-blue (darker with increasing number): */
+    --shade1: #B5D3E6;
+    --shade2: #97B0BF;
+    --shade3: #657580;
+    --shade4: #323B40;
 }
+/* .custom-bg {
+
+} */
