--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -9,7 +9,15 @@
     --shade2: #97B0BF;
     --shade3: #657580;
     --shade4: #323B40;
-}
-/* .custom-bg {
 
-} */
+    /* transparent alternatives to existing color scheme: */
+    --trans-shade2: rgba(151, 176, 191, .75);
+
+    /* Google fonts: */
+    --rubik: "'Rubik', sans-serif";
+    --dirt: "'Rubik Dirt', cursive";
+    --distressed: "'Rubik Distressed', cursive";
+}
+.nav-bg {
+background-color: var(--trans-shade2);
+}
