--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12,6 +12,7 @@
 
     /* transparent alternatives to existing color scheme: */
     --trans-shade2: rgba(151, 176, 191, .9);
+    --trans-shade4: rgba(50, 59, 64, .9);
 
     /* Google fonts: */
     --rubik: 'Rubik', sans-serif;
