--- a/src/assets/css/aboutme.css
+++ b/src/assets/css/aboutme.css
@@ -1,3 +1,40 @@
+/* !important on override of bootstrap */
 .custom-card {
-    max-width: 90%;
+    width: 70%;
+    font-family: var(--rubik);
+    border-radius: 1rem;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+.about-me-body {
+    min-height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.custom-card-header {
+    background-color: var(--light-blue);
+    color: var(--shade4);
+    margin-bottom: 0;
+    padding: 1%;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+}
+
+.custom-card-body {
+    background-color: var(--shade4);
+    padding: 1%;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+
+}
+
+.card-title {
+    color: var(--matte-blue);
+}
+
+.card-text {
+    color: var(--shade1);
 }
