updated about me name section with additional styling

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -32,3 +32,7 @@ body {
     /* fixed background for continuity */
     background-attachment: fixed;
 }
+
+.text-pink {
+    color: var(--light-pink);
+}
