--- a/src/components/AboutMe/aboutme.css
+++ b/src/components/AboutMe/aboutme.css
@@ -3,8 +3,7 @@
     width: 70%;
     font-family: var(--rubik);
     border-radius: 1rem;
-    margin-top: 4%;
-    margin-bottom: 2%;
+    margin: 3%;
 }
 
 .about-me-body {
