--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -8,7 +8,14 @@ footer {
 }
 
 .icon {
-    font-size: 6.5rem;
+    font-size: 4.5rem;
     padding: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
     color: var(--light-pink);
+}
+
+.icon:hover {
+    cursor: pointer;
+    color: var(--light-blue);
 }
