--- a/src/components/HomePage/homepage.css
+++ b/src/components/HomePage/homepage.css
@@ -1,5 +1,5 @@
 .home-page {
-    min-height: 80vh;
+    min-height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,4 +12,13 @@
     font-family: var(--rubik);
     font-size: 500%;
     font-weight: 900;
+}
+
+/* media queries */
+
+/* ipad air */
+@media screen and (max-width: 820px) {
+    .home-page-title {
+        font-size: 400%;
+    }
 }
