css queries for surface duo complete

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -29,3 +29,11 @@ footer {
     font-size: 3.5rem;
     }
 }
+
+/* Surface Duo */
+@media screen and (max-width: 540px) {
+    
+    .icon {
+    font-size: 2.5rem;
+    }
+}
