--- a/src/components/AboutMe/aboutme.css
+++ b/src/components/AboutMe/aboutme.css
@@ -51,3 +51,13 @@
 .card-name {
     color: var(--light-blue);
 }
+/* media queries */
+
+/* Surface Duo */
+@media screen and (max-width: 540px) {
+    
+    .custom-card {
+        width: 85%;
+    }
+
+}
