--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -48,3 +48,13 @@
         max-width: 50%;
     }
 }
+
+/* Galaxy Fold */
+@media screen and (max-width: 280px) {
+    .nav-font {
+        font-size: 80%;
+       } 
+       .nav-img {
+        max-width: 75%;
+    }
+}
