--- a/src/components/Welcome/welcome.css
+++ b/src/components/Welcome/welcome.css
@@ -9,6 +9,12 @@
     align-items: center;
 }
 
+.loading-icon { 
+height: 300px;
+width: 300px;
+color: var(--light-pink);
+}
+
 @media screen and (max-width: 700px) {
     .homepage-img {
         min-height: 60vh;
