added separate mobile video

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -35,6 +35,7 @@ body {
     /* fixed background for continuity */
     background-attachment: fixed;
     font-family: var(--body-font);
+    min-height: 100vh;
 }
 
 .text-pink {
