--- a/src/components/HomePage/homepage.css
+++ b/src/components/HomePage/homepage.css
@@ -3,29 +3,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.home-page-title {
-    max-width: 80%;
-    color: var(--shade2);
-    background-color: var(--alt-trans-shade4);
-    font-family: var(--rubik);
-    font-size: 500%;
-    font-weight: 900;
-}
-
-/* media queries */
-
-/* ipad air */
-@media screen and (max-width: 820px) {
-    .home-page-title {
-        font-size: 400%;
-    }
-}
-
-/* Surface Duo */
-@media screen and (max-width: 540px) {
-    .home-page-title {
-        font-size: 300%;
-    }
+    background-color: var(--shade4);
 }
