--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -15,6 +15,10 @@
     /* font-family: var(--rubik); */
     color: var(--light-pink);
     font-size: 150%;
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    padding: 0;
 }
 
 .nav-font:hover {
