--- a/src/components/MobileWelcome/assets/css/mobile-welcome.css
+++ b/src/components/MobileWelcome/assets/css/mobile-welcome.css
@@ -8,3 +8,11 @@
     max-width: 100vw;
     object-fit: cover;
 }
+
+.loading-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--light-blue);
+}
