added dropdown for nav bar and added additional buttons for socials and services

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -5,6 +5,18 @@
     align-items: center;
 }
 
+#custom-dropdown {
+    background-color: transparent;
+    border: none;
+    color: var(--light-pink);
+    font-size: 150%;
+}
+
+#custom-menu button {
+    background-color: transparent;
+    border: none;
+}
+
 .header-bg {
     display: flex;
     background-color: var(--trans-shade4);
