changed hover effects for nav bar consistent with user feedback, now they only shake for a few seconds instead of constantly, restyled dropdown items on mouse event hover

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -21,6 +21,11 @@
     border: none;
 }
 
+.dropdown-item:hover {
+    /* !important to override bootstrap instead of creating an id for each dropdown item */
+    background-color: transparent !important;
+}
+
 .header-bg {
     display: flex;
     background-color: var(--trans-shade4);
