--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -21,7 +21,7 @@ footer {
 }
 
 .icon {
-    font-size: 4.5rem;
+    font-size: 300%;
     padding: 1%;
     margin-left: 1%;
     margin-right: 1%;
