--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -14,6 +14,7 @@
     width: 70%;
     background-color: var(--shade4);
     border-radius: 1rem;
+    margin-top: 3%;
 }
 
 .form-card-body {
@@ -32,6 +33,17 @@
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     padding: 1%;
+    text-align: center;
+}
+
+.interest-form {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3%;
+}
+
+#interest-iframe {
+    min-height: 100vh;
 }
 
 label {
@@ -45,10 +57,6 @@ label {
     
     .form-card {
         width: 85%;
-    }
-
-    .contact-main {
-        min-height: 160vh;
     }
 
 }
