updated styling for card headers

--- a/src/components/AboutMe/aboutme.css
+++ b/src/components/AboutMe/aboutme.css
@@ -20,6 +20,7 @@
     padding: 1%;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
+    text-align: center;
 }
 
 .custom-card-body {
