--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -31,6 +31,18 @@
     background-color: var(--trans-shade4);
 }
 
+.highlighted {
+    text-shadow: 
+    0 0 10px #fff, 
+    0 0 20px #fff, 
+    0 0 30px #fff, 
+    0 0 40px var(--light-blue), 
+    0 0 70px var(--light-blue), 
+    0 0 80px var(--light-blue), 
+    0 0 100px var(--light-blue), 
+    0 0 150px var(--light-blue);
+}
+
 .nav-font {
     text-decoration: none;
     /* font-family: var(--rubik); */
