--- a/src/Pages/Contact/contact.css
+++ b/src/Pages/Contact/contact.css
@@ -42,6 +42,15 @@
     margin-bottom: 3%;
 }
 
+.consult-text{
+    font-size: 16px;
+}
+.consult-link {
+    color: var(--shade3);
+    font-size: 16px;
+    text-underline-offset: 10%;
+}
+
 #interest-iframe {
     min-height: 100vh;
 }
